Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6252

AMQP 1.0 browsing client generates large number of errors on broker.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.31
    • 0.31
    • C++ Client
    • None

    Description

      An AMQP 1.0 client that uses a mixtiure of browsing and acquiring receivers on the same session generates spurious error messages in the broker log like this:

      [Broker] error Delivery returned for unknown link

      The following python program illustrates the problem.

      from qpid_messaging import *
      
      c = Connection.establish("localhost", protocol="amqp1.0")
      ssn = c.session()
      ssn.sender("foo;{create:always}").send("foo")
      r = ssn.receiver("foo;{mode:browse}")
      r.fetch().content
      r.close()
      ssn.acknowledge()
      

      Attachments

        Issue Links

          Activity

            People

              aconway Alan Conway
              aconway Alan Conway
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: